objects/AFSC__FS_Alert__c.object
<CustomObject>
    <description>F-Secure Cloud Protection: File and URL scan alert</description>
    <fields>
        <fullName>AFSC__Date_Time__c</fullName>
        <label>Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AFSC__Details__c</fullName>
        <label>Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AFSC__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Original_File_Id__c</fullName>
        <label>Original File Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Reason__c</fullName>
        <label>Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Replacement_File_Id__c</fullName>
        <label>Replacement File</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AFSC__Severity__c</fullName>
        <label>Severity</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Critical</fullName>
                    <color>#CC0000</color>
                    <label>Critical</label>
                </value>
                <value>
                    <fullName>Important</fullName>
                    <color>#F3D904</color>
                    <label>Important</label>
                </value>
                <value>
                    <fullName>Information</fullName>
                    <color>#3366FF</color>
                    <label>Information</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>File Protection</fullName>
                </value>
                <value>
                    <fullName>License</fullName>
                </value>
                <value>
                    <fullName>URL Protection</fullName>
                </value>
                <value>
                    <fullName>Security Cloud</fullName>
                </value>
                <value>
                    <fullName>Administration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AFSC__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Alerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Alert</label>
    <nameField>
        <displayFormat>{00000000}</displayFormat>
        <label>Alert Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>